--- a/A4 Module/Part B/package.json
+++ b/A4 Module/Part B/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "fourth_lecture_template",
-  "version": "1.0.0",
-  "description": "Foundation, Sass, Gulp",
-  "main": "bin/start_server",
-  "scripts": {
-    "start": "node bin/start_server"
-  },
-  "author": "Howard Bates",
-  "license": "MIT",
-  "engines": {
-    "node": ">= 19.0.0"
-  },
-  "dependencies": {
-    "ejs": "latest"
-  },
-  "devDependencies": {
-    "babel-eslint": "latest",
-    "eslint": "latest",
-    "gulp": "latest",
-    "gulp-newer": "latest",
-    "gulp-git": "latest",
-    "gulp-minify-ejs": "latest",
-    "gulp-sass": "latest",
-    "gulp-terser": "latest",
-    "node-sass": "latest"
-  }
+    "name": "A4 Module Part B",
+    "main": "bin/start_server",
+    "scripts": {
+        "start": "node bin/start_server"
+    },
+    "engines": {
+        "node": ">= 19.0.0"
+    },
+    "dependencies": {
+        "ejs": "latest"
+    },
+    "devDependencies": {
+        "babel-eslint": "latest",
+        "eslint": "latest",
+        "gulp": "latest",
+        "gulp-git": "latest",
+        "gulp-minify-ejs": "latest",
+        "gulp-newer": "latest",
+        "gulp-dart-sass": "latest",
+        "gulp-terser": "latest"
+    }
 }
